# clipboard-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.claude/agents/: changelog.md  db-schema.md  done.md  issue.md  release.md  testing.md  validate.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  constants.ts  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit.rs  categorizer.rs  clipboard.rs  commands.rs  context.rs  db.rs  lib.rs  main.rs  window_state.rs
src-tauri/tests/: db_integration.rs  db_upgrade_test.rs
src/components/: BuiltinBadge.tsx  CategoriesManager.test.tsx  CategoriesManager.tsx  CollectionSelector.tsx  CollectionsManager.test.tsx  CollectionsManager.tsx  ColorPicker.tsx  ContentRenderer.test.tsx  ContentRenderer.tsx  ContentTypesManager.test.tsx  ContentTypesManager.tsx  DetailPanel.tsx  EntryItem.test.tsx  EntryItem.tsx  EntryList.test.tsx  EntryList.tsx  FilterPanel.tsx  OnboardingTutorial.test.tsx  OnboardingTutorial.tsx  SearchBar.test.tsx  SearchBar.tsx  SettingsPanel.tsx  SubcollectionPanel.test.tsx  SubcollectionPanel.tsx  TypeaheadSelect.test.tsx  TypeaheadSelect.tsx  WindowControls.tsx
src/hooks/: useClipboard.test.ts  useClipboard.ts  useCollections.test.ts  useCollections.ts  useContentTypes.test.ts  useContentTypes.ts  useOS.test.ts  useOS.ts  useTheme.test.ts  useTheme.ts
src/locales/: en.json  es-MX.json
src/test/: setup.ts
src/utils/: regex.test.ts  (+3 more)
